# wondergirl

./: .gitignore  Animation.cpp  Animation.h  Application.cpp  Application.h  CLAUDE.md  CMakeLists.txt  Character.cpp  Character.h  ColBox.cpp  ColBox.h  CollisionSystem.cpp  CollisionSystem.h  Defines.h  Sprite.cpp  Sprite.h  SpriteData.h  Wall.cpp  Wall.h  WonderGirl.cpp  WonderGirl.sln  WonderGirl.vcxproj  WonderGirl.vcxproj.filters
.claude/skills/add-sdl-library/: SKILL.md
scripts/: build.ps1  build.sh
